<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <GVL Name="ACL_Const" Id="{e1eec0f6-7a23-4e19-917a-fd2453668fdd}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	cuinMaxConnections: UINT := 50;
END_VAR]]></Declaration>
    <ObjectProperties>﻿<XmlArchive>
  <Data>
    <o xml:space="preserve" t="FileLink">
      <v n="FileName">""</v>
      <v n="LinkType" t="LinkType">ExportBeforeCompile</v>
      <v n="lTimeStamp">0L</v>
    </o>
  </Data>
  <TypeList>
    <Type n="FileLink">{0e9188e9-4f07-4676-afb5-399bcddbc44b}</Type>
    <Type n="Int64">System.Int64</Type>
    <Type n="LinkType">{926664ef-7286-4d12-8220-5000ab511fa6}</Type>
    <Type n="String">System.String</Type>
  </TypeList>
</XmlArchive></ObjectProperties>
  </GVL>
</TcPlcObject>