<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_ACL_Cur" Id="{fa5f4aba-0896-4336-a8f6-7ebb5891e07d}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_ACL_Cur :
STRUCT
	// Shows the number of ADS (server) connections
	uinNumOfAdsConnections: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>