<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_ACL_Par" Id="{06f78058-ea13-453e-81d2-e8212098a16a}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_ACL_Par :
STRUCT
	// [ms] Timeout power on. Timeout for initialize all ADS connections.
	udiTOPowerOn_ms: UDINT;
	// [ms] Timeout read data
	udiTOReadData_ms: UDINT;
	// [ms] Timeout write data
	udiTOWriteData_ms: UDINT;
	// [ms] Timeout read/write data
	udiTORWData_ms: UDINT;
	// [ms] Polling interval for read/write of all ADS connections in list
	udiPollingInterval_ms: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>